# neko

./: .earthlyignore  .gitattributes  .gitignore  .travis.yml  CHANGES  CMakeLists.txt  Earthfile  INSTALL  LICENSE  Makefile  Makefile.common  Makefile.dep  Makefile.linux  README.md  appveyor.yml  azure-pipelines.yml  cgi.neko  configure  deploy.sh  haxeci_sec.gpg.enc  haxeci_ssh.enc  mkrelease.bat  mysql.neko  neko.sln  neko_vc10.sln  regexp.neko  sys.neko
.devcontainer/: Dockerfile  build.sh  devcontainer.json  direnv.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: deprecation-notice.md  new-issue.md
.github/workflows/: main.yml
boot/: nekoc.n  nekoml.n  nekoml.std
cmake/: FindAPACHE.cmake  FindAPR.cmake  FindBoehmGC.cmake  FindGTK2.cmake  FindGTK3.cmake  FindMariaDBConnector.cmake  FindMbedTLS.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindSQLite3.cmake  FindSqlite3.cmake  FindZlib.cmake  NekoConfig.cmake.in  NekoConfigVersion.cmake.in  download.cmake  flatten.cmake  flatten.cmake.in  ldconfig.cmake  package_choco.cmake  patch_apache.cmake  patch_apr-util.cmake  patch_mariadb.cmake  patch_mbedtls.cmake  patch_openssl.cmake  post_install.cmake  source_archive_fat.cmake  uninstall.cmake.in  upload_to_ppa.cmake
extra/: Brewfile-STATIC_DEPS_ALL  Brewfile-STATIC_DEPS_NONE  chocolateyInstall.ps1  chocolateyUninstall.ps1  neko.nuspec
extra/azure-pipelines/: Brewfile-STATIC_DEPS_ALL  Brewfile-STATIC_DEPS_NONE  build-linux.yml  build-mac.yml  build-windows.yml
extra/chocolatey/: .gitignore  Build-Package.ps1  VERIFICATION.txt  chocolateyInstall.ps1  chocolateyInstall.ps1.template  chocolateyUninstall.ps1  generatePackage.ps1  neko.nuspec
libs/: CMakeLists.txt  libs.sln  libs_vc10.sln
libs/common/: CMakeLists.txt  os.h  osdef.h  osdef.h.in  sha1.c  sha1.h  socket.c  socket.h
libs/gc/: CMakeLists.txt  av_safety.patch
libs/include/: LICENSE
libs/include/apache/: ApacheCore.lib  ap_ebcdic.h
libs/include/apache2/: apr.h  httpd.h  libapr-1.lib  libhttpd.lib  os.h
libs/include/apache22/: apr.h  apu.h  httpd.h  libapr-1.lib  libhttpd.lib  os.h
libs/include/apache24/: apu.h  libhttpd.lib
libs/include/gc/: NOTES.txt  av_safety.patch  gc.lib  gc.vcproj  gcstat.lib  msvc_dbg.c  win32_threads.c
libs/include/msvcrt/: extra.lib  extra.sln  extra.vcproj  extras.c
libs/include/mysql/: CMakeLists.txt  config-win.h  ma_common.h  mariadbclient.lib  my_config.h  my_global.h  mysql.h  mysql_com.h  mysql_embed.h  mysql_version.h  mysqlclient.lib
libs/include/mysql/mysql/: plugin_auth.h  plugin_auth_common.h
libs/include/ocaml/: binast.ml  nast.ml  nxml.ml
libs/include/ocaml/ml/: mlast.ml  mllexer.mll  mlmain.ml  mlmatch.ml  mlneko.ml  mlparser.ml  mltype.ml  mltyper.ml
libs/include/ocaml/neko/: bytecode.ml  compile.ml  lexer.mll  main.ml  neko.vcproj  parser.ml  plugin.ml  printer.ml
libs/include/pcre/: config.h  pcre.h  pcre_dfa_exec.c  pcre_internal.h
libs/include/sqlite/: sqlite3.h  sqlite3.lib
libs/include/ssl/: crypto.lib  mbedTLS.lib  ssl.lib
libs/include/ssl/mbedtls/: config.h
libs/include/ssl/openssl/: opensslconf.h
libs/include/zlib/: zconf.h  zlib.lib
libs/mod_neko/: CMakeLists.txt  cgi.c  mod_neko.c  mod_neko.h  mod_neko.vcproj  mod_neko.vcxproj  mod_neko2.vcproj  mod_neko2.vcxproj  mod_neko22.vcxproj  mod_neko24.vcxproj
libs/mod_tora/: CMakeLists.txt  mod_tora.c  mod_tora.vcproj  mod_tora.vcxproj  mod_tora2.vcproj  mod_tora2.vcxproj  mod_tora22.vcxproj  mod_tora24.vcxproj  protocol.c  protocol.h
libs/mod_tora/server/: Admin.hx  CHANGES.txt  Client.hx  Infos.hx  ModNekoApi.hx  ModToraApi.hx  StressTest.hx  Tora.hx  haxelib.xml  release.bat  tora.bat  tora.hxml  tora.hxp
libs/mod_tora/server/test/: Test.hx  test.hxml  test.hxp  test4x4.html
libs/mod_tora/server/tora/: Api.hx  Code.hx  Infos.hx  Persist.hx  Protocol.hx  Queue.hx  Share.hx
libs/mysql/: CMakeLists.txt  mysql.c  mysql.vcproj  mysql.vcxproj  mysql5.vcproj  mysql5.vcxproj
libs/mysql/my_proto/: my_api.c  my_proto.c  my_proto.h  mysql.h  sha1.c  sha1.h  socket.c  socket.h
libs/ocaml/: binast.ml  nast.ml  nxml.ml
libs/ocaml/ml/: mlast.ml  mllexer.mll  mlmain.ml  mlmatch.ml  mlneko.ml  mlparser.ml  mltype.ml  mltyper.ml
libs/ocaml/neko/: bytecode.ml  compile.ml  lexer.mll  main.ml  parser.ml  plugin.ml  printer.ml
libs/regexp/: CMakeLists.txt  regexp.c  regexp.vcproj  regexp.vcxproj
libs/sqlite/: CMakeLists.txt  sqlite.c  sqlite.vcproj  sqlite.vcxproj
libs/ssl/: CMakeLists.txt  mbedtls_config.h  ssl.c  ssl.vcproj  ssl.vcxproj  threading_alt.h
libs/std/: CMakeLists.txt  UCase.hx  buffer.c  date.c  elf_update.c  file.c  init.c  int32.c  int64.c  math.c  md5.c  memory.c  misc.c  module.c  process.c  random.c  serialize.c  socket.c  std.vcproj  std.vcxproj  std2.sln  string.c  sys.c  thread.c  thread.h  unicase.c  unicode.c  utf8.c  win_api_strings.h  xml.c
libs/ui/: CMakeLists.txt  ui.c  ui.vcproj  ui.vcxproj
libs/uv/: CMakeLists.txt  uv.c
libs/zlib/: CMakeLists.txt  zlib.c  zlib.vcproj  zlib.vcxproj
src/: Makefile  Makefile.boot  neko.vcproj  neko.vcxproj  nekoml.vcproj  nekoml.vcxproj
src/benchs/: ackerman.neko  binary-trees.neko  fannkuch.neko  fib.neko  fp.neko  module.neko  nbodies.neko  nsieve.neko  recursive.neko  startup.neko  test_ops.neko
src/core/: Args.nml  Array.nml  Buffer.nml  Core.nml  Hashtbl.nml  IO.nml  Int32.nml  LexEngine.nml  Lexer.nml  List.nml  Map.nml  Math.nml  Net.nml  Reflect.nml  Reflex.nml  Regexp.nml  Set.nml  Stack.nml  String.nml  Sys.nml  (+2 more)
test/: RunTests.hx  RunTests.hxml
tests/: CMakeLists.txt  goto.neko
vm/: alloc.c  builtins.c  callback.c  context.c  context.h  elf.c  elf_update.c  gc.c  gc.h  hash.c  installer.vcproj  interp.c  jit_x86.c  load.c  main.c  module.c  neko.h  neko.h.in  neko_elf.h  neko_mod.h  neko_vm.h  nekovm.vcproj  nekovm.vcxproj  nekovm_dll.vcproj  nekovm_dll.vcxproj  objtable.c  objtable.h  opcodes.h  others.c  stats.c  threads.c  vm.h
www/: doc.html  download.html  faq.html  footer.html  header.html  home.html  index.n  index.neko  main.css  news.html
(+72 files in other folders)
